--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <main id="projects">
         <div class="recipe a">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
-          <h2>CHOCOLATE MOUSSE</h2>
+          <h2>How you are Learning Wrong</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">20 mins</p>
           <p class="description">
-            This delicious chocolate mousse will delight dinner guests of all ages!</p>
+            How to escape Tutorial Hell and truly apply your knowledge in programming, math, and <a href="https://medium.com/@ariks/how-you-are-learning-wrong-612691f4e801">more.</a></p>
         </div>
         <div class="recipe b">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
