Added more site content

--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
         </div>
         <div class="recipe b">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
-          <h2>SMOKED LAMB WITH RICE</h2>
+          <h2>CobraCast</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">120 mins</p>
           <p class="description">
-            Want to feel like your favorite relative came over and made you dinner? This comfort meal of smoked lamb and rice will quickly become a weekend favorite!
+            The <a href="https://soundcloud.com/aadil-rana-177245610/cobracast">Cobra Homies</a> sit and talk about gaming reviews and how they've effected the state of games and the perception of games of all genres.
           </p>
         </div>
         <div class="recipe c">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
-          <h2>GOAT CHEESE SALAD</h2>
+          <h2>Video Project</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">25 mins</p>
           <p class="description">
-            In addition to the full flavor of goat cheese, this salad includes kale, avocado, and farro to balance it out.</p>
+            Enticing description of the video project :o</p>
         </div>
         <div class="recipe d">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
-          <h2>CHICKEN SANDWICH</h2>
+          <h2>Game website</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">45 mins</p>
           <p class="description">
-            We've packed a lot into this one - shredded cabbage, carmalized onions, deep-fried chicken, chipotle mayo, half-sour pickles, and a toasted sesame bun will leave you thoroughly satisfied!</p>
+            A very barebones <a href="https://www.arok.fun">website</a> with a few simple games I've tried to make to javascript</p>
         </div>
         <div class="recipe e">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
