--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <main id="projects">
         <div class="recipe a">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
+          <img src="images/blog-studying.jpg" alt="Person at desk studying with laptop" />
           <h2>How you are Learning Wrong</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">20 mins</p>
@@ -37,7 +37,7 @@
             How to escape Tutorial Hell and truly apply your knowledge in programming, math, and <a href="https://medium.com/@ariks/how-you-are-learning-wrong-612691f4e801">more.</a></p>
         </div>
         <div class="recipe b">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
+          <img src="images/podcast-review-stars.jpg" alt="Five stars" />
           <h2>CobraCast</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">120 mins</p>
@@ -46,7 +46,7 @@
           </p>
         </div>
         <div class="recipe c">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
+          <img src="images/video-camera.jpg" alt="A video camera" />
           <h2>Video Project</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">25 mins</p>
@@ -54,7 +54,7 @@
             Enticing description of the video project :o</p>
         </div>
         <div class="recipe d">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
+          <img src="images/website-game.jpg" alt="Some dice on a table" />
           <h2>Game website</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">45 mins</p>
