--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Arik S</title>
-    <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,70 +27,30 @@
       </header>
 
       <main id="projects">
-        <div class="recipe a">
+        <div class="project">
           <img src="images/blog-studying.jpg" alt="Person at desk studying with laptop" />
           <h2>How you are Learning Wrong</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">20 mins</p>
           <p class="description">
             How to escape Tutorial Hell and truly apply your knowledge in programming, math, and <a href="https://medium.com/@ariks/how-you-are-learning-wrong-612691f4e801">more.</a></p>
         </div>
-        <div class="recipe b">
+        <div class="project">
           <img src="images/podcast-review-stars.jpg" alt="Five stars" />
           <h2>CobraCast</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">120 mins</p>
           <p class="description">
             The <a href="https://soundcloud.com/aadil-rana-177245610/cobracast">Cobra Homies</a> sit and talk about gaming reviews and how they've effected the state of games and the perception of games of all genres.
           </p>
         </div>
-        <div class="recipe c">
+        <div class="project">
           <img src="images/video-camera.jpg" alt="A video camera" />
           <h2>Video Project</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">25 mins</p>
           <p class="description">
-            Enticing description of the video project :o</p>
+            A very brief <a href="https://www.youtube.com/watch?v=rBbKA0xXPUY">introduction video</a> to a game creation software called GameMaker.</p>
         </div>
-        <div class="recipe d">
+        <div class="project">
           <img src="images/website-game.jpg" alt="Some dice on a table" />
           <h2>Game website</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">45 mins</p>
           <p class="description">
-            A very barebones <a href="https://www.arok.fun">website</a> with a few simple games I've tried to make to javascript</p>
-        </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
+            A very barebones <a href="https://www.arok.fun">website</a> with a few simple games I've tried to make to javascript.</p>
         </div>
       </main>
 
