Minor wording changes

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
           <img src="images/video-camera.jpg" alt="A video camera" />
           <h2>Video Project</h2>
           <p class="description">
-            A very brief <a href="https://www.youtube.com/watch?v=rBbKA0xXPUY">introduction video</a> to a game creation software called GameMaker.</p>
+            A brief <a href="https://www.youtube.com/watch?v=rBbKA0xXPUY">introduction video</a> to a game creation software called GameMaker.</p>
         </div>
         <div class="project">
           <img src="images/website-game.jpg" alt="Some dice on a table" />
           <h2>Game website</h2>
           <p class="description">
-            A very barebones <a href="https://www.arok.fun">website</a> with a few simple games I've tried to make to javascript.</p>
+            A very barebones <a href="https://www.arok.fun">website</a> with a few simple games I made to learn and practice javascript</p>
         </div>
       </main>
 
