Minor wording changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <img src="images/podcast-review-stars.jpg" alt="Five stars" />
           <h2>CobraCast</h2>
           <p class="description">
-            The <a href="https://soundcloud.com/aadil-rana-177245610/cobracast">Cobra Homies</a> sit and talk about gaming reviews and how they've effected the state of games and the perception of games of all genres.
+            The <a href="https://soundcloud.com/aadil-rana-177245610/cobracast">CobraCast</a> talk about gaming reviews and how they've effected both the state and perception of games.
           </p>
         </div>
         <div class="project">
